--- a/perfiles-fitness/vercel.json
+++ b/perfiles-fitness/vercel.json
@@ -1,10 +1,6 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "src/app/**/*.tsx", "use": "@vercel/next" },
-    { "src": "next.config.js", "use": "@vercel/next" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ]
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "framework": "nextjs",
+  "installCommand": "npm install"
 }
