--- a/perfiles-fitness/package.json
+++ b/perfiles-fitness/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^12.23.24",
     "mongodb": "^6.7.0",
     "next": "15.5.3",
     "react": "19.1.0",
